<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AS Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_opened">Drawer_opened</string>
    <string name="drawer_closed">Drawer_closed</string>
    <string name="title_activity_page_slider">PageSlider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_icon">Icons in drawer</string>
    <string name="album_art">Album Art Icon</string>
    <string name="title_activity_player_controls">PlayerControls</string>
    <string name="artist">Artist Name</string>
    <string name="album">Album Name</string>
    <string name="title">Track Name</string>
    <string name="play_btn">Play</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="artist_image">ic_artist</string>
    <string name="artist_name">Name</string>
    <string name="no_albums">No of albums</string>
    <string name="rewind">Rewind</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="Next">Next</string>
    <string name="close">Close</string>
    <string name="Back">Back</string>
    <string name="Forward">Forward</string>
    <string name="Shuffle">Shuffle</string>
    <string name="Repeat">Repeat</string>
    <string name="current_duration">current time</string>
    <string name="total_duration">total_time</string>
    <string name="home_icon">home_icon</string>
    <string name="savePreset">Save Preset</string>
    <string name="band_frequency_1">63 Hz</string>
    <string name="band_frequency_2">210 Hz</string>
    <string name="band_frequency_3">910 Hz</string>
    <string name="band_frequency_4">4 KHz</string>
    <string name="band_frequency_5">14 kHz</string>
    <string name="genre_text">Genre Icon</string>
    <string name="bass_boost">BassBoost</string>
    <string name="preset">Preset Reverb</string>
    <string name="launcher">Launcher</string>
    <string name="version_no">Version 1.0.1</string>
    <string name="note">Note*: This is a beta version.</string>
    <string name="ack_title">Acknowlegments</string>
    <string name="ack">Mr.Abhay Bhave\nMr.Azhar Bandri\nMs.Nupoor Roy</string>
    <string name="note_title">Note*:</string>
    <string name="support">Support this app </string>
    <string name="image_description">Image Description</string>

</resources>