<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/img_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:contentDescription="@string/album_art"
            android:scaleType="fitXY"
            android:src="@drawable/ic_album_art" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/rewind"
            android:focusable="true"
            android:src="@drawable/ic_repeat" >
        </ImageButton>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/back_btn"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/play_btn"
            android:focusable="true"
            android:src="@drawable/ic_pause" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/next_btn"
            android:focusable="true"
            android:src="@drawable/ic_forward" />

        <ImageButton
            android:id="@+id/shuffle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/Forward"
            android:focusable="true"
            android:src="@drawable/ic_shuffle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_thumbnail"
        android:layout_margin="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/song_title_text_view"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/album_name_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/album"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/artist_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/artist"
            android:textSize="14sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/progress_Bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/duration"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <LinearLayout
        android:id="@+id/duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/controls"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" >

        <TextView
            android:id="@+id/current_pos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start" />

        <TextView
            android:id="@+id/total_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end" />
    </LinearLayout>

</RelativeLayout>