<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="4dp" >

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="wrap_content"
        android:layout_height="144dip"
        android:contentDescription="@string/album_art"
        android:padding="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/album_name_text_view"
        android:layout_width="144dip"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="4dp"
        android:singleLine="true"
        android:text="@string/album"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/album_artist_text_view"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="4dp"
        android:singleLine="true"
        android:text="@string/artist"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>