<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip" >

        <LinearLayout
            android:id="@+id/about"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dip"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/launcher"
                android:padding="20dip"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:gravity="center"
                android:padding="4dip"
                android:text="@string/app_name"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:gravity="center"
                android:padding="4dip"
                android:text="@string/version_no"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/acknow_head"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="4dip"
                android:paddingTop="25dip"
                android:text="@string/ack_title"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dip"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:layout_marginTop="4dip"
                android:background="#918C8C" />

            <TextView
                android:id="@+id/acknowlegde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:gravity="center_horizontal"
                android:maxLines="3"
                android:paddingTop="4dip"
                android:text="@string/ack"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/note"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/about"
            android:layout_marginTop="8dip"
            android:gravity="center"
            android:padding="4dip"
            android:text="@string/note"
            android:textColor="#FF0000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>