<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/remote_art"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:contentDescription="@string/album_art"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/remote_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/title" />

            <TextView
                android:id="@+id/remote_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/album" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>