<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#16DCFF"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="94dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <ImageView
            android:id="@+id/cover_art"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/home_icon"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="#FF680A"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/rewind"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:clickable="true"
                    android:contentDescription="@string/rewind"
                    android:src="@drawable/ic_rewind" />

                <ImageButton
                    android:id="@+id/play_pause"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:clickable="true"
                    android:contentDescription="@string/play"
                    android:src="@drawable/ic_play" />

                <ImageButton
                    android:id="@+id/forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:clickable="true"
                    android:contentDescription="@string/Forward"
                    android:src="@drawable/ic_forward" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>