<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/equalizer_preset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/savePreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/savePreset"
            android:src="@drawable/ic_play" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/equalizer_band1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bandFrequency_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frequency_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/equalizer_band2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bandFrequency_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frequency_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/equalizer_band3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bandFrequency_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frequency_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/equalizer_band4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bandFrequency_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frequency_4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/equalizer_band5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bandFrequency_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frequency_5" />
    </LinearLayout>

</LinearLayout>