<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nowPlaying"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#FFB260"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="2dip"
    android:paddingTop="3dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/detail_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingTop="4dip" >

            <TextView
                android:id="@+id/slide_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="4dip"
                android:singleLine="true"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slide_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="4dip"
                android:paddingTop="3dip"
                android:singleLine="true"
                android:text="@string/artist"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/slide_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>