<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/slide_art"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controls_slide"
        android:contentDescription="@string/album_art"
        android:src="@drawable/ic_album_art" />

    <LinearLayout
        android:id="@+id/controls_slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/slide_currenttime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/current_duration" />

            <TextView
                android:id="@+id/slide_totalduration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/total_duration" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/slide_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/slide_repeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_repeat" />

            <ImageView
                android:id="@+id/slide_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_back" />

            <ImageView
                android:id="@+id/slide_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/slide_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_forward" />

            <ImageView
                android:id="@+id/slide_shuffle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_shuffle" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>